--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "wpreadme2markdown/wpreadme2markdown",
-    "description": "Convert WordPress Plugin readme.txt to Markdown",
+    "name": "wpreadme2markdown/wp2md",
+    "description": "CLI tool for converting WordPress Plugin readme.txt to Markdown",
     "keywords": [
         "wordpress",
         "markdown",
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.5|~3.0",
+        "symfony/console": "^2.5|^3.0",
+        "wpreadme2markdown/wpreadme2markdown": "^3.0",
         "php": ">= 5.3.3"
     },
     "require-dev": {
@@ -27,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "WPReadme2Markdown\\": "src/"
+            "WPReadme2Markdown\\Cli\\": "src/"
         }
     },
     "scripts": {
