--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         }
     ],
     "require": {
-        "symfony/console": "^2.5|^3.0",
+        "symfony/console": "^3.2",
         "wpreadme2markdown/wpreadme2markdown": "^3.0",
-        "php": ">= 5.3.3"
+        "php": ">= 5.5.9"
     },
     "require-dev": {
         "indeyets/pake": "~1.99",
