--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     },
     "require": {
-        "symfony/console": "^3.2|^4.0",
+        "symfony/console": "^3.2|^4.0|^5.0",
         "wpreadme2markdown/wpreadme2markdown": "^3.0.1",
         "php": ">= 5.5.9"
     },
