--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     ],
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "7.2.5"
         },
         "sort-packages": true
     },
     "require": {
-        "php": ">= 5.5.9",
+        "php": "^7.2.5 || ^8.0",
         "composer-runtime-api": ">= 2.0.0",
-        "symfony/console": "^3.2|^4.0|^5.0",
-        "wpreadme2markdown/wpreadme2markdown": "^3.0.1"
+        "symfony/console": "^5.0",
+        "wpreadme2markdown/wpreadme2markdown": "^4.0"
     },
     "require-dev": {
         "ext-json": "*",
