Fix pake, open the gates of hell

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "require-dev": {
         "ext-json": "*",
         "indeyets/pake": "~1.99",
+        "php5friends/polyfill-create_function": "^0.0.4",
         "secondtruth/phar-compiler": "~1.1"
     },
     "autoload": {
