--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
     "require": {
         "php": "^7.2.5 || ^8.0",
         "composer-runtime-api": ">= 2.0.0",
-        "symfony/console": "^5 || ^6",
-        "wpreadme2markdown/wpreadme2markdown": "^4.0.3"
+        "symfony/console": "^5 || ^6 || ^7",
+        "wpreadme2markdown/wpreadme2markdown": "^4.1.0"
     },
     "require-dev": {
         "ext-json": "*",
